# DeepForestVisionV2

./: .gitignore  LICENSE.txt  Readme.md  pyproject.toml  requirements.txt  run_inference.py
deepforestvision/: classification.py  cli.py  config.py  detection_utils.py  io_utils.py  pipeline.py  video_utils.py
tests/: test_smoke.py
weights/: DeepForestVisionV2.pth
weights/dinov3/: .docstr.yaml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MODEL_CARD.md  README.md  conda.yaml  hubconf.py  pyproject.toml  requirements-dev.txt  setup.py
weights/dinov3/.github/workflows/: lint.yaml
weights/dinov3/dinov3/: __init__.py
weights/dinov3/dinov3/checkpointer/: __init__.py  checkpointer.py
weights/dinov3/dinov3/configs/: __init__.py  config.py  ssl_default_config.yaml
weights/dinov3/dinov3/data/: __init__.py  adapters.py  augmentations.py  collate.py  loaders.py  masking.py  meta_loaders.py  samplers.py  transforms.py
weights/dinov3/dinov3/distributed/: __init__.py  torch_distributed_primitives.py  torch_distributed_wrapper.py
weights/dinov3/dinov3/env/: __init__.py
weights/dinov3/dinov3/eval/: accumulators.py  data.py  helpers.py  knn.py  linear.py  log_regression.py  results.py  setup.py  utils.py
weights/dinov3/dinov3/fsdp/: ac_compile_parallelize.py
weights/dinov3/dinov3/hub/: backbones.py  classifiers.py  depthers.py  detectors.py  dinotxt.py  segmentors.py  utils.py
weights/dinov3/dinov3/layers/: __init__.py  attention.py  block.py  dino_head.py  ffn_layers.py  fp8_linear.py  layer_scale.py  patch_embed.py  rms_norm.py  rope_position_encoding.py  sparse_linear.py
weights/dinov3/dinov3/logging/: __init__.py  helpers.py
weights/dinov3/dinov3/loss/: __init__.py  dino_clstoken_loss.py  gram_loss.py  ibot_patch_loss.py  koleo_loss.py
weights/dinov3/dinov3/models/: __init__.py  convnext.py  vision_transformer.py
weights/dinov3/dinov3/run/: init.py  submit.py
weights/dinov3/dinov3/train/: __init__.py  cosine_lr_scheduler.py  multidist_meta_arch.py  param_groups.py  train.py  (+1 more)
(+87 files in other folders)
