[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepforestvision"
version = "2.0.0"
description = "DeepForestVision v2: wildlife identification for African tropical forest camera-trap images and videos."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
deepforestvision = "deepforestvision.cli:main"

[tool.setuptools]
packages = ["deepforestvision"]

[project.urls]
Homepage = "https://www.oneforestvision.org"
AddaxAI = "https://addaxdatascience.com/addaxai/"
Paper = "SUBMITTED TO IEEE IJCNN"
License = "https://creativecommons.org/licenses/by-nc-sa/4.0"