[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepforestvision"
version = "2.0.0"
description = "DeepForestVision v2: wildlife identification for African tropical forest camera-trap images and videos."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "tqdm",
    "pillow",
    "opencv-python",
    "torch",
    "torchvision",
    "transformers",
    "supervision",
    "PytorchWildlife",
    "soundfile",
    "librosa"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
deepforestvision = "deepforestvision.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepforestvision*"]
exclude = ["tests*", "data*", "outputs*", "runs*", "notebooks*"]

[tool.setuptools.package-data]
deepforestvision = ["weights/**/*"]

[project.urls]
Homepage = "https://www.oneforestvision.org"
AddaxAI = "https://addaxdatascience.com/addaxai/"
Paper = "ACCEPTED AT ICPR 2026"
DeepForestVisionV1 = "https://besjournals.onlinelibrary.wiley.com/doi/10.1002/2688-8319.70167"
License = "https://creativecommons.org/licenses/by-nc-sa/4.0"
